--- a/page2.html
+++ b/page2.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Average Price by Odometer</title>
-  <script src="https://cdn.jsdelivr.net/npm/d3@7/dist/d3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
-</head>
-<body>
-  <h1>Average Price by Odometer</h1>
-  <p id="description">
-    The odometer reading of a vehicle directly relates to it's price. As vehicles accumulate mileage, their resale value typically declines, reflecting depreciation and wear.<br>
-    However, as the odometer increases, the price tapers off to a consistent value.
-  </p>
-  <svg id="table" width="1000" height="500"></svg>
-  <button id="backButton">Back</button>
-  <button id="nextPageButton">Next</button>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Average Price by Odometer</title>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7/dist/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
+  </head>
+  <body>
+    <h1>Average Price by Odometer</h1>
+    <p id="description">
+      Outside of these economic events, the odometer reading of a vehicle most
+      directly relates to it's price. As vehicles accumulate mileage, their
+      resale value typically declines, reflecting depreciation and wear.<br />
+      However, as the odometer increases, the price eventually tapers off to a
+      consistent value.
+    </p>
+    <svg id="table" width="1000" height="500"></svg>
+    <button id="backButton">Back</button>
+    <button id="nextPageButton">Next</button>
 
-  <script src="js/page2.js"></script>
-  <script>
-    document.getElementById("backButton").addEventListener("click", () => {
-      window.location.href = "index.html";
-    });
-    document.getElementById("nextPageButton").addEventListener("click", () => {
-      window.location.href = "page3.html";
-    });
-  </script>
-</body>
+    <script src="js/page2.js"></script>
+    <script>
+      document.getElementById("backButton").addEventListener("click", () => {
+        window.location.href = "index.html";
+      });
+      document
+        .getElementById("nextPageButton")
+        .addEventListener("click", () => {
+          window.location.href = "page3.html";
+        });
+    </script>
+  </body>
 </html>
