--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       For example, following the 2008 financial crisis, used vehicle prices rose sharply. This rise was influenced by decreased new car production and
       increased demand for affordable vehicles. <br />
       In 2011, there was a particularly large uptick in used car prices compared
-      to the previous years.
+      to the previous years. <br>
+      Hover over the data points for more detailed information.
     </p>
     <svg id="table" width="1000" height="500"></svg>
     <button id="nextButton">Next</button>
