--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <h1>Average Price by Odometer</h1>
     <p id="description">
       Outside of these economic events, the odometer reading of a vehicle most
-      directly relates to it's price. As vehicles accumulate mileage, their
+      directly relates to its price. As vehicles accumulate mileage, their
       resale value typically declines, reflecting depreciation and wear.<br />
       However, as the odometer increases, the price eventually tapers off to a
       consistent value.
