--- a/page3.html
+++ b/page3.html
@@ -13,7 +13,7 @@
       their value better than others.<br />
       For example, the Ford F-150 seems to hold a value of around $4000 at 200k
       miles, nearly double the average. <br />
-      Select a vehicle from the dropdown to see it's price change as it's
+      Select a vehicle from the dropdown to see its price change as its
       mileage increases.
     </p>
     <div>
